...
    // MARK: - Private properties
    
    private var nameLabel: UILabel!
    private var loginLabel: UILabel!
    private var infoLabel: UILabel!
    private var profileImageView: UIImageView!
    private var logoutButton: UIButton!
    
    private var profileImageServiceObserver: NSObjectProtocol?
    private var alertPresenter: AlertPresenterProtocol?
    
    // MARK: - Lifecycle
    
...
    // MARK: - Private methods
    
    private func profileAlertShow() {
        let alertModel = ExtendedAlertModel(
            title: "Пока-Пока!",
            message: "Уверены, что хотите выйти?",
            firstButtonText: "Да",
            secondButtonText: "Нет",
            firstCompletion: { [weak self] in
                guard let self else { return }
                self.presenter?.logout()
                self.logoutButton.isEnabled = false
                print ("Нажата кнопка - Да")
...
