...
        
        webView.navigationDelegate = self
        
        presenter?.webViewLoading()
        progressObservation()
        
        webView.accessibilityIdentifier = "UnsplashWebView"
    }
    
    // MARK: - Methods
    
    func setProgressValue(_ newValue: Float) {
        progressView.progress = newValue
...
